src/objects/Notify_User__c.object
<CustomObject>
    <fields>
        <fullName>Parent_ER__c</fullName>
        <formula>$Label.MFS_Instance_URL + Speaker_Request__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent ER</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker Request</label>
        <referenceTo>Event_Request__c</referenceTo>
        <relationshipLabel>Notify Users</relationshipLabel>
        <relationshipName>Notify_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Termination_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Termination Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Notify Users</relationshipLabel>
        <relationshipName>Notify_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Notify_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_email__c</fullName>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User email</label>
        <type>Text</type>
    </fields>
    <label>Notify User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NU-{000}</displayFormat>
        <label>NotifyUser Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notify Users</pluralLabel>
    <recordTypes>
        <fullName>Notify_User_for_Case</fullName>
        <active>true</active>
        <label>Notify User</label>
    </recordTypes>
    <recordTypes>
        <fullName>Notify_User_for_Speaker_Request</fullName>
        <active>true</active>
        <label>Notify User (for Speaker Request Only)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>